Added new registration type using otp service. Removed old registration types. Added emailId and phoneNumber to OtpService